--- a/packages/starlight-contributor-list/components/FacePile.astro
+++ b/packages/starlight-contributor-list/components/FacePile.astro
@@ -46,7 +46,7 @@ const { contributors } = Astro.props as Props;
   }
 
   .avatar-list li {
-    positition: relative;
+    position: relative;
     --avatar-row-margin: calc(
       var(--avatar-outline-offset) + var(--avatar-outline-width) +
         var(--avatar-row-spacing) / 2
